refactor[#208]: 식재료 조회 쿼리 개선