@@ -1,33 +1,24 @@
 package com.foodkeeper.foodkeeperserver.food.domain;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.*;
 
 public class FoodCategories {
 
     private final Map<Long, List<FoodCategory>> categories;
 
     private FoodCategories(Map<Long, List<FoodCategory>> categories) {
-        this.categories = Collections.unmodifiableMap(new HashMap<>(categories));
+        this.categories = Map.copyOf(categories);
     }
 
-    public static FoodCategories from(List<SelectedFoodCategory> selectedFoodCategories, List<FoodCategory> foodCategories) {
-        Map<Long, FoodCategory> categoryMap = foodCategories.stream()
-                .collect(Collectors.toMap(FoodCategory::id, fc -> fc));
-
-        Map<Long, List<FoodCategory>> grouped = selectedFoodCategories.stream()
-                .collect(Collectors.groupingBy(
-                        SelectedFoodCategory::foodId,
-                        Collectors.mapping(
-                                sfc -> categoryMap.get(sfc.foodCategoryId()),
-                                Collectors.toUnmodifiableList()
-                        )
-                ));
-
-        return new FoodCategories(grouped);
+    public static FoodCategories from(List<Map.Entry<Long, FoodCategory>> categoriesByFoodId) {
+        return new FoodCategories(categoriesByFoodId.stream()
+                .collect(groupingBy(
+                        Map.Entry::getKey,
+                        mapping(Map.Entry::getValue, toList())))
+        );
     }
 
     public List<FoodCategory> getCategories(Long foodId) {
